Update Professional Summary & Details

--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
         <!-- Header Section -->
         <header>
             <h1>Anshika Shrivastava</h1>
-            <p>B.Tech 3rd Year | Web Development Enthusiast | C/C++ Programmer</p>
+            <p>B.Tech 4rd Year | Web Development Enthusiast | C/C++ Programmer</p>
         </header>
 
+        <!-- Professional Summary Section -->
+        <section id="Professional Summary">
+            <h2>Professional Summary</h2>
+            <div class="section-content">
+                <p>A passionate fourth-year B.Tech student in Computer Science & Engineering with strong foundational skills in web development, programming, and data analysis. Experienced in developing projects using C, C++, Python, SQL, HTML, CSS, and JavaScript. Eager to expand expertise in full-stack development, machine learning, and software engineering.</p>
+            </div>
+        </section>
+        
         <!-- Education Section -->
         <section id="education">
             <h2>Education</h2>
@@ -23,8 +31,9 @@
                 <p>Takshshila Institude of engineering & Technology, JBP, India</p>
                 <p>Year: 2022 - Present</p>
                 <ul>
-                    <li>Currently pursuing 3rd year with a focus on software development and programming.</li>
-                    <li>Relevant coursework: Data Structures, Algorithms, Web Development, Object-Oriented Programming.</li>
+                    <li>Currently pursuing 4rd year with a focus on software development and programming.</li>
+                    <li><strong>Relevant coursework:</strong> Data Structures, Algorithms, Web Development, Object-Oriented Programming.</li>
+
                 </ul>
             </div>
         </section>
@@ -34,9 +43,10 @@
             <h2>Skills</h2>
             <div class="section-content">
                 <ul>
-                    <li><strong>Programming Languages:</strong> C, C++</li>
+                    <li><strong>Programming Languages:</strong> C, C++, Python, SQL</li>
                     <li><strong>Web Development:</strong> HTML, CSS, JavaScript (Learning)</li>
-                    <li><strong>Tools:</strong> Git, Visual Studio Code</li>
+                    <li><strong>Tools & Platforms:</strong>Git, Power BI, Excel, MySQL, Visual Studio Code</li>
+                    <li><strong>Soft Skills:</strong>Strong Communication, Problem-Solving, Teamwork, Time Management</li>
                 </ul>
             </div>
         </section>
@@ -49,13 +59,34 @@
                     <li><strong>Project 1: Portfolio Website</strong>
                         <p>Developed a personal portfolio website to showcase my projects and skills using HTML, CSS, and basic JavaScript.</p>
                     </li>
-                    <li><strong>Project 2: Restaurant Landing Page</strong>
-                        <p>Developed a responsive, multi-page restaurant website using HTML and CSS.</p>
+                    <li><strong>Project 2: Basic ATM System</strong>
+                        <p>Created a simple ATM (Automated Teller Machine) system implemented in C.</p>
+                    </li>
+                    <li><strong>Project 3: Music Player</strong>
+                        <p>Developed a responsive web-based Music Player using HTML, CSS, and JavaScript with dynamic audio playback and interactive UI controls.</p>
                     </li>
                 </ul>
             </div>
         </section>
 
+         <!-- Certificate Section -->
+         <section id="Certificate">
+            <h2>Certificates</h2>
+            <div class="section-content">
+                <ul>
+                    <li><strong>•	AWS Cloud Practitioner Essentials</strong>
+                        <p>Amazon Web Services (AWS) | June 2025</p>
+                    </li>
+                    <li><strong>•	React Bootcamp</strong>
+                        <p>Let's Upgrade | February 2025</p>
+                    </li>
+                    <li><strong>•	Responsive Web Design </strong>
+                        <p>freeCodeCamp | November 2024</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contact Information</h2>
@@ -63,6 +94,7 @@
                 <li><strong>Email:</strong>  <a href="mailto:anshika2941@gmail.com">anshika2941@gmail.com</a></li>
                 <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/anshika-shrivastava-7862b8245/" target="_blank">linkedin.com/in/anshika-shrivastava</a></li>
                 <li><strong>GitHub:</strong> <a href="https://github.com/Anshika2941" target="_blank">github.com/Anshika Shrivastava</a></li>
+                <li><strong>Contact Number:</strong>+91-9340445634</li>
             </div>
         </section>
     </div>
