--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <li><strong>Project 1: Portfolio Website</strong>
                         <p>Developed a personal portfolio website to showcase my projects and skills using HTML, CSS, and basic JavaScript.</p>
                     </li>
-                    <li><strong>Project 2: Basic ATM System</strong>
-                        <p>Created a simple ATM (Automated Teller Machine) system implemented in C.</p>
+                    <li><strong>Project 2: Restaurant Landing Page</strong>
+                        <p>Developed a responsive, multi-page restaurant website using HTML and CSS.</p>
                     </li>
                     <li><strong>Project 3: Music Player</strong>
                         <p>Developed a responsive web-based Music Player using HTML, CSS, and JavaScript with dynamic audio playback and interactive UI controls.</p>
